<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_living_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/globalBg"
    tools:context="com.example.hanawa.smarterhometest.LivingRoomActivity">

    <include
        android:id="@+id/living_room_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/living_room_ll_mode_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/living_room_toolbar"
        android:layout_marginLeft="@dimen/living_room_horizontal_margin"
        android:layout_marginTop="@dimen/living_room_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/scenes_choice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/living_room_text_margin_top"
            android:text="@string/mode_select"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/living_room_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/living_room_ll_light_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/living_room_toolbar"
        android:layout_marginRight="@dimen/living_room_horizontal_margin"
        android:layout_marginTop="@dimen/living_room_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/lights_control" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/living_room_text_margin_top"
            android:text="@string/light_control"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/living_room_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/living_room_ll_tem_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/living_room_ll_mode_select"
        android:layout_marginLeft="@dimen/living_room_horizontal_margin"
        android:layout_marginTop="@dimen/living_room_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/temperature_control" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/living_room_text_margin_top"
            android:text="@string/temperaturre_control"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/living_room_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/living_room_ll_scenes_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/living_room_ll_mode_select"
        android:layout_marginRight="@dimen/living_room_horizontal_margin"
        android:layout_marginTop="@dimen/living_room_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/scenes_choice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/living_room_text_margin_top"
            android:text="@string/scenes_control"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/living_room_text_size" />

    </LinearLayout>


</RelativeLayout>
