<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mode_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/globalBg"
    tools:context="com.example.hanawa.smarterhometest.ModeSelectActivity">

    <include
        android:id="@+id/ms_toolbar"
        layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_line_vertical_height"
        android:layout_below="@+id/ms_toolbar"
        android:background="@color/lineColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ms_toolbar"
        android:layout_marginLeft="@dimen/content_margin_left"
        android:layout_marginRight="@dimen/content_margin_right"
        android:layout_marginTop="@dimen/ms_ll_margin_top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ms_ll_home_come"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ms_iv_home_come"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mode_back_home_sel" />

            <TextView
                android:id="@+id/ms_tv_home_come"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ms_text_margin_top"
                android:text="@string/mode_home_come"
                android:textColor="@color/colorOn" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ms_ll_home_leave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ms_iv_home_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mode_leave_home_nor" />

            <TextView
                android:id="@+id/ms_tv_home_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ms_text_margin_top"
                android:text="@string/mode_home_leave"
                android:textColor="@color/colorOff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ms_ll_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ms_iv_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mode_video_nor" />

            <TextView
                android:id="@+id/ms_tv_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ms_text_margin_top"
                android:text="@string/mode_radio"
                android:textColor="@color/colorOff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ms_ll_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ms_iv_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mode_receive_nor" />

            <TextView
                android:id="@+id/ms_tv_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ms_text_margin_top"
                android:text="@string/mode_host"
                android:textColor="@color/colorOff" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
